--- a/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/dhis-web-commons/security/login_mobile.vm
+++ b/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/dhis-web-commons/security/login_mobile.vm
@@ -1,125 +1,103 @@
 <!DOCTYPE HTML>
 <html class="loginPage">
 
-<head>
-    <title>$!encoder.htmlEncode( ${applicationTitle} )</title>
-    <meta name="description" content="DHIS 2">
-    <meta name="keywords" content="DHIS 2">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <head>
+        <title>$!encoder.htmlEncode( ${applicationTitle} )</title>
+        <meta name="description" content="DHIS 2">
+        <meta name="keywords" content="DHIS 2">
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <script type="text/javascript" src="../javascripts/jQuery/jquery.min.js"></script>
-    <script type="text/javascript" src="login.js"></script>
-    <link type="text/css" rel="stylesheet" href="../css/widgets.css">
-    <link type="text/css" rel="stylesheet" href="../css/login.css">
-    <link rel="stylesheet" href="./css/bootstap.min.css" crossorigin="anonymous">
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <script type="text/javascript" src="../javascripts/jQuery/jquery.min.js"></script>
+        <script type="text/javascript" src="login.js"></script>
+        <link type="text/css" rel="stylesheet" href="../css/widgets.css">
+        <link type="text/css" rel="stylesheet" href="../css/login.css">
+        <link rel="stylesheet" href="./css/bootstap.min.css" crossorigin="anonymous">
 
-    <link type="text/css" rel="stylesheet" href="../../api/files/style/external" />
+        <link type="text/css" rel="stylesheet" href="../../api/files/style/external" />
 
-    <style>
-        .col {
-            padding: 0;
-            margin-bottom:2%;
-        }
+        <style>
+         .col {
+             padding: 0;
+         }
 
-        #loginField {
-            margin: 20px auto 0 auto;
-        }
-        
-    </style>
+         #loginField {
+             margin: 20px auto 0 auto;
+         }
+         
+        </style>
 
-</head>
+    </head>
 
-<body>
+    <body>
 
-    <div class='container'>
+        <div class='container'>
 
-
-
-        <div class="row" style="margin-bottom: 2%;">
-            <div class="col-md-12 text-center">
-                <img src="./images/Logo1.png" alt="logo1" height='120px'>
+            <div class="row" >
+                <div class="col-md-12 text-center">
+                    <img src="./images/logo3.png" alt="logo1" width="600px" height='120px'>
+                </div>
             </div>
-        </div>
 
+            <div class="row">
+                <div class="col  text-left">
+                    <img src="./images/logo2.png" alt="logo2" width="200px" height="180px">
+                </div>
+                <div class='col-md-6 col-sm-3'>
 
-
-        <div class="row">
-            <div class="col col-md-3 col-sm-12 text-center">
-                <img src="./images/Logo2.png" alt="logo2" width="200px">
-            </div>
-            <div class="col col-md-6 col-sm-12 text-center">
-                <img src="./images/logo3.jpg" alt="logo3" width="250px" height="220px">
-            </div>
-            <div class="col col-md-3 col-sm-12 text-center">
-                <img src="./images/logo4.jpg" alt="logo4" width="200px">
-            </div>
-        </div>
-
-
-
-
-
-        <div class="row">
-
-            <div class='col-md-12 col-sm-3'>
-
-                <div id="loginField">
-                    <div id="loginArea">
-                        <div id="bannerArea">
-                            <a href="http://www.dhis2.org"><img src="../../api/staticContent/logo_front" style="border:none"></a>
-                        </div>
-
-                        <form id="loginForm" action="../../dhis-web-commons-security/login.action" method="post">
-                            <div>
-                                <div id="signInLabel">Sign in</div>
-                                <div><input type="text" id="j_username" name="j_username" placeholder="Username"></div>
-                                <div><input type="password" id="j_password" name="j_password" autocomplete="off" placeholder="Password"></div>
+                    <div id="loginField">
+                        <div id="loginArea">
+                            <div id="bannerArea">
+                                <a href="http://www.dhis2.org"><img src="../../api/staticContent/logo_front" style="border:none"></a>
                             </div>
-                            <div id="submitDiv">
-                                <input id="submit" class="button" type="submit" value="Sign in">
-                            </div>
-                            #if( $keyAccountRecovery )
-                            <div style="padding-bottom: 10px">
-                                <a id="forgotPasswordLink" href="recovery.action">Forgot password?</a>
-                            </div>
-                            #end #if( $keyConfig.selfRegistrationAllowed() )
-                            <div style="padding-bottom: 10px">
-                                <a id="createAccountLink" href="account.action">Create an account</a>
-                            </div>
+
+                            <form id="loginForm" action="../../dhis-web-commons-security/login.action" method="post">
+                                <div>
+                                    <div id="signInLabel">Sign in</div>
+                                    <div><input type="text" id="j_username" name="j_username" placeholder="Username"></div>
+                                    <div><input type="password" id="j_password" name="j_password" autocomplete="off" placeholder="Password"></div>
+                                </div>
+                                <div id="submitDiv">
+                                    <input id="submit" class="button" type="submit" value="Sign in">
+                                </div>
+                                #if( $keyAccountRecovery )
+                                    <div style="padding-bottom: 10px">
+                                        <a id="forgotPasswordLink" href="recovery.action">Forgot password?</a>
+                                    </div>
+                                #end #if( $keyConfig.selfRegistrationAllowed() )
+                                    <div style="padding-bottom: 10px">
+                                        <a id="createAccountLink" href="account.action">Create an account</a>
+                                    </div>
+                                #end
+                            </form>
+                            #if( $keyOpenIdProvider )
+                                <form id="openIdLoginForm" action="../../dhis-web-commons-security/openid.action" method="post">
+                                    <input name="openid_identifier" type="hidden" value="$keyOpenIdProvider" />
+                                    <div id="submitDiv">
+                                        #if( $keyOpenIdProviderLabel )
+                                            <input style="width: 269px;" id="submit" class="button" type="submit" value="$keyOpenIdProviderLabel">                                #else
+                                            <input style="width: 269px;" id="submit" class="button" type="submit" value="Sign in with OpenID">                                #end
+                                    </div>
+                                </form>
+                            #end #if( $failed == true )
+                                <div id="loginMessage">
+                                    $!{request.getSession().getAttribute("LOGIN_FAILED_MESSAGE")}
+                                </div>
+                            #end #if ( $keyApplicationNotification )
+                                <div id="notificationArea">
+                                    $!{keyApplicationNotification}
+                                </div>
                             #end
-                        </form>
-                        #if( $keyOpenIdProvider )
-                        <form id="openIdLoginForm" action="../../dhis-web-commons-security/openid.action" method="post">
-                            <input name="openid_identifier" type="hidden" value="$keyOpenIdProvider" />
-                            <div id="submitDiv">
-                                #if( $keyOpenIdProviderLabel )
-                                <input style="width: 269px;" id="submit" class="button" type="submit" value="$keyOpenIdProviderLabel">                                #else
-                                <input style="width: 269px;" id="submit" class="button" type="submit" value="Sign in with OpenID">                                #end
-                            </div>
-                        </form>
-                        #end #if( $failed == true )
-                        <div id="loginMessage">
-                            $!{request.getSession().getAttribute("LOGIN_FAILED_MESSAGE")}
                         </div>
-                        #end #if ( $keyApplicationNotification )
-                        <div id="notificationArea">
-                            $!{keyApplicationNotification}
-                        </div>
-                        #end
                     </div>
                 </div>
-
+                <div class="col  text-right">
+                    <img src="./images/logo4.png" alt="logo4" width="200px" height="180px">
+                </div>
             </div>
         </div>
-    </div>
-
-
-
-
-
-</body>
+    </body>
 
 </html>
