--- a/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/dhis-web-commons/security/login_mobile.vm
+++ b/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/dhis-web-commons/security/login_mobile.vm
@@ -37,13 +37,13 @@
 
             <div class="row" >
                 <div class="col-md-12 text-center">
-                    <img src="./images/logo3.png" alt="logo1" width="600px" height='120px'>
+                    <img src="./images/bihar_logo2.png" alt="bihar_logo2" width="600px" height='120px'>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col  text-left">
-                    <img src="./images/logo2.png" alt="logo2" width="200px" height="180px">
+                    <img src="./images/bihar_logo1.png" alt="bihar_logo1" width="200px" height="180px">
                 </div>
                 <div class='col-md-6 col-sm-3'>
 
@@ -78,7 +78,7 @@
                                     <div id="submitDiv">
                                         #if( $keyOpenIdProviderLabel )
                                             <input style="width: 269px;" id="submit" class="button" type="submit" value="$keyOpenIdProviderLabel">                                #else
-                                            <input style="width: 269px;" id="submit" class="button" type="submit" value="Sign in with OpenID">                                #end
+                                            <input style="width: 269px;" id="submit" class="button" type="submit" value="Sign in with OpenID">                                #end
                                     </div>
                                 </form>
                             #end #if( $failed == true )
@@ -94,7 +94,7 @@
                     </div>
                 </div>
                 <div class="col  text-right">
-                    <img src="./images/logo4.png" alt="logo4" width="200px" height="180px">
+                    <img src="./images/bihar_logo3.png" alt="bihar_logo3" width="200px" height="180px">
                 </div>
             </div>
         </div>
