--- a/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/dhis-web-commons/security/login.vm
+++ b/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/dhis-web-commons/security/login.vm
@@ -36,9 +36,9 @@
                 </tr>
                 <tr>
                     <td><a href="./Documents/G.O.-UPHMIS-25.05.2016.pdf"><span style="color:#1D5288;"><strong>- Go</strong></span></td><td>&nbsp;</td></tr>
-		
+
 		<tr><td><a href="./Documents/SOP-UPHMIS_80_Sets.pdf" ><span style="color:#1D5288;"><strong>- SOP</strong></span></td><td>&nbsp;</td></tr>
-	
+
 		<tr><td><a href="./Documents/USER_ID__75_dist_and_block_.pdf" ><span style="color:#1D5288;"><strong>- User Name List</strong></span></td><td>&nbsp;</td></tr>
                   <tr><td><a href="./Documents/UPHMIS_Formats_80_Sets_-_Hindi.pdf" ><span style="color:#1D5288;"><strong>- UPHMIS Formats</strong></span></td><td>&nbsp;</td></tr>
 		<tr><td>
@@ -53,7 +53,7 @@
                 </tr>
                 <tr>
                     <td><a href="./Documents/Campaign material final.zip"><span style="color:#1D5288"><strong>- Campaign Material</strong></span></td>
-                </tr>        
+                </tr>
                 <tr>
                     <td><a href="./Documents/Data_defination_SOP_English.pdf"><span style="color:#1D5288;"><strong>- Data defination/SOP(English)</strong></span></td><td>&nbsp;</td></tr>
 				<tr><td><a href="./Documents/Data_defination_SOP_Hindi.pdf"><span style="color:#1D5288;"><strong>- Data defination/SOP(Hindi)</strong></span></td><td>&nbsp;</td></tr>
@@ -69,7 +69,7 @@
                         <td><a href="#"><span style="color:#1D5288;"><strong>Contact Number :-    0522-4922366/4922367</strong></span></td><td>&nbsp;</td>
                     </tr>
 		</table>
-		
+
 		</div>
         <div id="loginArea" style="text-align: center;">
             <!--
@@ -84,18 +84,36 @@
                 <div><input type="text" autocomplete="off" id="j_username" name="j_username" placeholder="Username"/></div>
                 <div><input type="password" id="j_password" name="j_password" autocomplete="off" placeholder="Password" /></div>
             </div>
-			
-			
+
+
             <div id="submitDiv">
                 <input id="submit" class="button" type="submit" value="Sign in">
                 <input id="reset" class="button" type="reset" value="Clear">
             </div>
+            <!--@sou_forgot_password-->
+            #if( $keyAccountRecovery )
+                        <div style="padding-bottom: 10px">
+                            <a id="forgotPasswordLink" href="recovery.action">Forgot password?</a>
+                        </div>
+                        #end
         </form>
+        <!-- @sou__invalid login message-->
+        #if( $failed == true )
+                <div id="loginMessage">
+                    $!{request.getSession().getAttribute("LOGIN_FAILED_MESSAGE")}
+                </div>
+                #end
+                <!-- @sou__notification_area-->
+                #if ( $keyApplicationNotification )
+                <div id="notificationArea">
+                    $!{keyApplicationNotification}
+                </div>
+                #end
         <!--[if lte IE 8]>
             <div id="notificationArea" style="color: white; background-color: red;">Please upgrade your browser. Internet Explorer version 8 and earlier is not supported.</div>
             <![endif]-->
     </div>
-		
+
     </div>
 
 
