dhq format link updated and cmo format removed

--- a/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/dhis-web-commons/security/login.vm
+++ b/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/dhis-web-commons/security/login.vm
@@ -46,9 +46,9 @@
                 <a href='../../api/documents/JujMuu1gX3o/data' target='_blank' style="color:#1D5288;display:block;margin:5px; padding-left:15px;"><b>1. CHC Formats(Excel Import)</b></a>
                 <a href='../../api/documents/a83FenxitFY/data' target='_blank' style="color:#1D5288;display:block;margin:5px; padding-left:15px;"><b>2. PHC Formats(Excel Import)</b></a>
                 <a href='../../api/documents/W7V2WSyuYk1/data' target='_blank' style="color:#1D5288;display:block;margin:5px; padding-left:15px;"><b>3. SC Formats(Excel Import)</b></a>
-                <a href='./Documents/CMO_UPHMIS_New_Format.xlsx' target='_blank' style="color:#1D5288;display:block;margin:5px; padding-left:15px;"><b>4. CMO Formats(Excel Import)</b></a>
-                <a href='../../api/documents/tyEdUdte9ko/data' target='_blank' style="color:#1D5288;display:block;margin:5px; padding-left:15px;"><b>5. DH Formats(Excel Import)</b></a>
-                <a href='./Documents/DHQ.zip' target='_blank' style="color:#1D5288;display:block;margin:5px; padding-left:15px;"><b>6. DHQ Formats</b></a>
+                <!--<a href='./Documents/CMO_UPHMIS_New_Format.xlsx' target='_blank' style="color:#1D5288;display:block;margin:5px; padding-left:15px;"><b>4. CMO Formats(Excel Import)</b></a>-->
+                <a href='../../api/documents/tyEdUdte9ko/data' target='_blank' style="color:#1D5288;display:block;margin:5px; padding-left:15px;"><b>4. DH Formats(Excel Import)</b></a>
+                <a href='../../api/documents/keXHvW805bC/data' target='_blank' style="color:#1D5288;display:block;margin:5px; padding-left:15px;"><b>5. DHQ Formats</b></a>
             </td>
             </tr>
             <tr>
