campaign zip moved (ext .7z)
campaign zip moved (ext .7z)

--- a/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/dhis-web-commons/security/login.vm
+++ b/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/dhis-web-commons/security/login.vm
@@ -52,7 +52,7 @@
             </td>
             </tr>
             <tr>
-                <td><a href="./Documents/Campaign material final.zip"><span style="color:#1D5288"><strong>- Campaign Material</strong></span></td>
+                <td><a href="../../api/documents/zPEwxIdtl8a/data"><span style="color:#1D5288"><strong>- Campaign Material</strong></span></td>
             </tr>
             <tr>
                 <td><a href="../../api/documents/gjZXT5kfSXW/data"><span style="color:#1D5288;"><strong>- Data defination/SOP(English)</strong></span></td><td>&nbsp;</td></tr>
