--- a/dhis-2/dhis-web/dhis-web-reports-national/src/main/webapp/dhis-web-reports/hmisReportAnalysisFront.vm
+++ b/dhis-2/dhis-web/dhis-web-reports-national/src/main/webapp/dhis-web-reports/hmisReportAnalysisFront.vm
@@ -29,7 +29,7 @@
     }           
 </script>
 
-<h1>$i18n.getString( "hmis_ra" )</h1>
+<h1>$i18n.getString( "hmis_uphmis_ra" )</h1>
 <hr /><br />
 <form id="reportForm" name="reportForm" action="generateHMISReport.action" method="post" onsubmit="return formValidations()" target="_blank">        
      <table align="center" style=" border-collapse: collapse; margin-top: 0;" cellpadding="0" cellspacing="0" width="730" border=0>                      
