--- a/dhis-2/dhis-web/dhis-web-reports-national/src/main/webapp/dhis-web-reports/menuWithTreeForHMISReports.vm
+++ b/dhis-2/dhis-web/dhis-web-reports-national/src/main/webapp/dhis-web-reports/menuWithTreeForHMISReports.vm
@@ -4,7 +4,7 @@
 <ul>
     <li>Report Analysis</li>
     <ul>
-    	<li>$i18n.getString( "hmis_ra" )</li>
+    	<li>$i18n.getString( "hmis_uphmis_ra" )</li>
     </ul>
 </ul>
 
