--- a/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/dhis-web-commons/security/login.vm
+++ b/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/dhis-web-commons/security/login.vm
@@ -51,12 +51,18 @@
             <a href="http://www.dhis2.org"><img src="../../api/staticContent/logo_front" style="border:none"></a>
             </div>
             
-            <form id="loginForm" action="../../dhis-web-commons-security/login.action" method="post">
+            <form id="loginForm" action="../../dhis-web-commons-security/login.action" method="post" onsubmit="return captchaValidations()">
                 <div>
                 	<div id="signInLabel">Sign in</div>
                     <div><input type="text" id="j_username" name="j_username" placeholder="Username" required></div>
                     <div><input type="password" id="j_password" name="j_password" autocomplete="off" placeholder="Password" required></div>
-                    <div>
+						<div>
+						<!--<input type="text" id="txtCaptcha" style="text-align:center; border:none; background-image:url(./imgs/captcha_back_ground.png); color:red; font-weight:bold; font-family:Modern; width:100px" readonly/>-->
+							<input type="text" id="txtCaptcha" style="text-align:center; border:none;color:red; font-weight:bold;font-size:25px; font-family:Modern; width:145px; background-image:url(./imgs/captcha_back_ground.png);" readonly/>
+							<input type="text" id="txtCaptchaInput" name="txtCaptchaInput" placeholder="Enter Captcha" style='width:148px;padding-left:2px;' required/>
+							<a href="javascript:drawComplexCaptcha();" title="$i18n.getString( "Regenerate Captcha" )"><img src="./imgs/refresh.png" alt="$i18n.getString( "Regenerate Captcha" )"></a>
+						</div>
+					<div>
                         <label><input type="checkbox" name="2fa" value="2fa" id="2fa" />Login using two factor authentication</label>
                         <input type="code" id="2fa_code" name="2fa_code" placeholder="Two factor authentication code" hidden readonly >
                     </div>
