--- a/dhis-2/dhis-web/dhis-web-reporting/src/main/webapp/dhis-web-reporting/dataSetReportForm.vm
+++ b/dhis-2/dhis-web/dhis-web-reporting/src/main/webapp/dhis-web-reporting/dataSetReportForm.vm
@@ -23,13 +23,6 @@ var i18n_share_your_interpretation = '$encoder.jsEscape( $i18n.getString( "share
 var i18n_interpretation_was_shared = '$encoder.jsEscape( $i18n.getString( "interpretation_was_shared" ), "'")';
 var i18n_select_option_view_all = '$encoder.jsEscape( $i18n.getString( "select_option_view_all" ) , "'")';
 </script>
-<script type="text/javascript">
-	function exportCustumDataSetReportToWorkBook()
-	{			    
-	    document.getElementById('htmlCode').value = document.getElementById('formResult').innerHTML;			    			
-	    return true;
-	}
-</script>
 
 <style type="text/css">
 div#control {
@@ -42,14 +35,14 @@ div.inputSection {
 }
 </style>
 
-<form id="form" name="form" action="exportToExcel.action" method="post" onsubmit="exportCustumDataSetReportToWorkBook()" target="_newtab">
 <h3 id="dataSetReportHeader">$i18n.getString( "dataset_report" ) #openHelp( "dataset_reports" )</h3>
 
 <div id="control">
 <input type="button" id="dataButton" value='$i18n.getString( "data_criteria" )' style="width:140px" onclick="dhis2.dsr.showCriteria()" disabled="disabled">
-<!--<input type="button" class="downloadButton" value="$i18n.getString( 'get_report_as_xls' )" onclick="dhis2.dsr.exportDataSetReport( 'xls' )" style="width:140px; display:none;">-->
-<input type="submit" class="downloadButton" value="$i18n.getString( 'get_report_as_xls' )" onclick="exportCustumDataSetReportToWorkBook();" style="width:140px; display:none;">
+<!--
+<input type="button" class="downloadButton" value="$i18n.getString( 'get_report_as_xls' )" onclick="dhis2.dsr.exportDataSetReport( 'xls' )" style="width:140px; display:none;">
 <input type="button" class="downloadButton" value="$i18n.getString( 'get_report_as_pdf' )" onclick="dhis2.dsr.exportDataSetReport( 'pdf' )" style="width:140px; display:none;">
+-->
 <input type="button" class="downloadButton" value="$i18n.getString( 'print' )" onclick="window.print()" style="width:140px; display:none;">
 </div>
 
@@ -128,11 +121,4 @@ div.inputSection {
 
 #parse( "dhis-web-commons/loader/loader.vm" )
 
-<!--<div id="content"></div>-->
-
-<div id="formResult">
-	<input type="hidden" name="htmlCode" id="htmlCode" />
-	<div id="content"></div>
-</div>
-</form>
-
+<div id="content"></div>
