--- a/dhis-2/dhis-web/dhis-web-reporting/src/main/webapp/dhis-web-reporting/renderSectionDataSetReportForm.vm
+++ b/dhis-2/dhis-web/dhis-web-reporting/src/main/webapp/dhis-web-reporting/renderSectionDataSetReportForm.vm
@@ -12,6 +12,64 @@
 }
 </style>
 
+<script type="text/javascript">
+
+	function exportCustumDataSetReportToWorkBook()
+	{			    
+	    document.getElementById('htmlCode').value = document.getElementById('formResult').innerHTML;			    			
+	    return true;
+	}
+</script>
+
+<form id="form" name="form" action="exportToExcel.action" method="post" onsubmit="exportCustumDataSetReportToWorkBook()" target="_newtab">
+	<input type="hidden" name="htmlCode" id="htmlCode" />
+	<input type="hidden" name="reportName" id="reportName" value="$encoder.htmlEncode( $selectedOrgunit.name )-$format.formatPeriod( $selectedPeriod )"/>	
+	
+	<div id="export">
+		<table> 
+			<tr>
+				<td colspan="2" style="height:5px"></td>
+			</tr>
+			<tr>
+				<td>
+					<input type="submit" value="$i18n.getString( 'get_report_as_workbook' )" style="width:140px;" />
+                </td>
+            </tr>
+        </table>
+    </div>
+	
+	#parse( "dhis-web-reporting/renderDataSetReportHeader.vm" )
+	<div id="formResult">
+		#foreach( $grid in $grids )
+			<div class="formSection" style="margin-bottom:30px">
+			<div class="cent"><h3>$!encoder.htmlEncode( $grid.title )</h3></div>
+
+				<table class="listTable gridTable">
+				<thead>
+					<tr>
+						#foreach( $header in $grid.getVisibleHeaders() )
+							<th #if( $header.meta )style="text-align:left"#end>$!encoder.htmlEncode( $header.name )</th>
+						#end
+					</tr>
+				</thead>
+			 <tbody>    
+			#foreach( $row in $grid.getVisibleRows() )
+				<tr>
+					#foreach( $col in $row )
+					#set( $index = ( $velocityCount - 1 ) )
+					#if( $grid.getVisibleHeaders().get( $index ).meta )<td class="lAln">$!encoder.htmlEncode( $col.value )</td>
+					#else<td><span class="val" #if( $col.hasAttr( 'de' ) )data-de="$!{col.attr( 'de' )}" data-co="$!{col.attr( 'co' )}"#end>$!format.formatValue( $col.value )</span></td>#end
+					#end
+				</tr>
+		   #end
+		 </tbody>
+		</table>
+	</div>
+	#end
+	</div>	
+</form>	
+
+<!--
 #parse( "dhis-web-reporting/renderDataSetReportHeader.vm" )
 
 #foreach( $grid in $grids )
@@ -42,3 +100,4 @@
 </table>
 </div>
 #end
+-->
