--- a/dhis-2/dhis-web/dhis-web-dataanalyser-in/src/main/webapp/dhis-web-dataanalyser-in/menu.vm
+++ b/dhis-2/dhis-web/dhis-web-dataanalyser-in/src/main/webapp/dhis-web-dataanalyser-in/menu.vm
@@ -9,7 +9,7 @@
 		   	</ul>
 		-->	
 		<li><a href="tabularAnalysisForm.action">$i18n.getString( "ta" )&nbsp;</a></li>
-		<li><a href="validationRuleForm.action">Validation Rule</a></li>
+		<!--<li><a href="validationRuleForm.action">Validation Rule</a></li>-->
 		<!--<li><a href="viewCommentForm.action">$i18n.getString( "vc" )</a></li>-->
 		
 		<!--
